better-routes/tests/trybuild/double-state.stderr
error: Duplicate State
  --> tests/trybuild/double-state.rs:31:5
   |
31 |     State => StateTwo,
   |     ^^^^^

error[E0412]: cannot find type `Foo` in this scope
  --> tests/trybuild/double-state.rs:38:6
   |
38 | impl Foo {
   |      ^^^ not found in this scope

error[E0412]: cannot find type `Bar` in this scope
  --> tests/trybuild/double-state.rs:44:6
   |
44 | impl Bar {
   |      ^^^ not found in this scope
